--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 2.8.3)
-project(rqt_plot)
+project(rqt_plotbag)
 # Load catkin and all dependencies required for this package
 find_package(catkin REQUIRED)
 catkin_package()
@@ -13,6 +13,6 @@ install(DIRECTORY resource
   DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}
 )
 
-install(PROGRAMS scripts/rqt_plot
+install(PROGRAMS scripts/rqt_plotbag
   DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
 )
