--- a/package.xml
+++ b/package.xml
@@ -1,16 +1,16 @@
 <package>
-  <name>rqt_plot</name>
+  <name>rqt_plotbag</name>
   <version>0.4.8</version>
-  <description>rqt_plot provides a GUI plugin visualizing numeric values in a 2D plot using different plotting backends.</description>
+  <description>rqt_plotbag provides a GUI plugin visualizing numeric values in a 2D plot using different plotting backends.</description>
   <maintainer email="dthomas@osrfoundation.org">Dirk Thomas</maintainer>
   <maintainer email="scholz@sim.tu-darmstadt.de">Dorian Scholz</maintainer>
   <maintainer email="namniart@gmail.com">Austin Hendrix</maintainer>
 
   <license>BSD</license>
 
-  <url type="website">http://wiki.ros.org/rqt_plot</url>
-  <url type="repository">https://github.com/ros-visualization/rqt_plot</url>
-  <url type="bugtracker">https://github.com/ros-visualization/rqt_plot/issues</url>
+  <url type="website">http://wiki.ros.org/rqt_plotbag</url>
+  <url type="repository">https://github.com/ros-visualization/rqt_plotbag</url>
+  <url type="bugtracker">https://github.com/ros-visualization/rqt_plotbag/issues</url>
 
   <author>Dorian Scholz</author>
 
